[project]
name = "chiaswap"
description = "Atomic swaps of Chia (XCH) and Bitcoin (BTC) via lightning."
authors = ["Richard Kiss <him@richardkiss.com>"]
license = "MIT"
repository = "https://github.com/richardkiss/chiaswap.git"
readme = "README.md"
src_root = "."
dependencies = ["chia_base==0.1.1", "aiohttp", "chialisp_puzzles"]
packages = ["chiaswap"]
# version is defined with `setuptools_scm`. See `SConstruct` file.

[project.optional_dependencies]
test = ["nose", "coverage"]
dev = ["ruff", "black==21.12b0"]

[project.entry_points]
console_scripts = ["xchswap = chiaswap.main:main", "pushtx = chiaswap.pushtx:main"]

[build-system]
requires = ["pytoml>=0.1", "enscons", "setuptools_scm>=6.2"]
build-backend = "enscons.api"
